# cp_book

./: .windsurfrules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  Usage.md  benchmarks.md  debug.hpp  library_fixes.md
.github/: copilot-instructions.md
dp/: line_multiset.hpp
ds/: binary_indexed_tree.hpp  cartesian_tree.hpp  disjoint_set.hpp  hash_map.hpp  hilbert_curve.hpp  indexed_set.hpp  order_statistic.hpp  range_min_query.hpp  seg_tree.hpp  sparse_table.hpp  swag.hpp  van_emde_boas_tree.hpp  wavelet.hpp
fft/: berlekamp_massey.hpp  fft.hpp  kitamasa.hpp
flow/: dijkstra_min_cost_flow.hpp  flow_graph.hpp  flow_network.hpp  max_flow.hpp  network_simplex.hpp
geo/: convex_hull.hpp  convex_inclusion.hpp  half_plane_intersect.hpp  minkowski_sum.hpp  pair_line.hpp  pair_point.hpp  polygon.hpp
graph/: ancestor.hpp  build_bipartite.hpp  centroid_tree.hpp  euler_tour.hpp  eulerian.hpp  graph.hpp  matching.hpp  min_vertex_cover.hpp  scc_comp.hpp  span_forest.hpp  span_tree.hpp  sparse_ancestor.hpp  topo_sort.hpp  tree_diameter.hpp  twosat_graph.hpp
math/: combinatorics.hpp  derangement.hpp  diophantine.hpp  div.hpp  euler_totient_function.h  factorizer.hpp  legendre_power.hpp  matrix.hpp  miller_rabin.hpp  sieve.h  sieve.hpp  sqrt.hpp
misc/: compressor.hpp  fast_input_output.hpp  reverse_args.hpp  ska_sort.hpp  tensor.hpp  y_combinator.hpp
mod/: modnum.hpp
string/: manacher.hpp  prefix_function.hpp  prefix_power_hash.hpp  prefix_tree.hpp  suffix_array.hpp  z_function.hpp
template/: Makefile  fhc.cpp  fhc.hpp  leet.cpp  leet.hpp  temp.cpp  temp.hpp
(+99 files in other folders)
